--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -770,8 +770,7 @@
     function showResponse(message) {
         $(document).Toasts('create', {
             class: 'bg-info',
-            title: 'Toast Title',
-            subtitle: 'Subtitle',
+            title: '消息推送',
             body: message
         })
     }
