--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -423,6 +423,12 @@
     $(document).ready(function () {
         bsCustomFileInput.init();
     });
+
+    function getCookie() {
+        var decodedCookie = decodeURIComponent(document.cookie);
+       console.log(decodedCookie.substring(decodedCookie.indexOf('=')+1));
+
+    }
 </script>
 </body>
 </html>
