--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -315,18 +315,25 @@
                                 <div class="card-body">
                                     <div class="form-group">
                                         <label>头像</label>
-                                        <div style="background-color: black;height: 350px;width: 350px;"></div>
+                                        <div style="background-color: black;height: 350px;width: 350px;"><img src="" id="preview"></div>
                                     </div>
                                     <div class="form-group">
                                         <label for="exampleInputFile">选择头像文件</label>
                                         <div class="input-group">
                                             <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="exampleInputFile">
+                                                <input type="file" class="custom-file-input" id="exampleInputFile" onchange="check()" accept="image/jpg,image/jpeg,img/png,img/PNG">
                                                 <label class="custom-file-label" for="exampleInputFile">Choose file</label>
                                             </div>
                                             <div class="input-group-append">
                                                 <span class="input-group-text" id="">上传</span>
                                             </div>
+                                            <script>
+                                                function check(){
+                                                    console.log($('#exampleInputFile').val());
+                                                    $('#preview').src($('#exampleInputFile').val());
+                                                }
+
+                                            </script>
                                         </div>
                                     </div>
                                     <div class="form-group">
