--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -315,7 +315,7 @@
                                 <div class="card-body">
                                     <div class="form-group">
                                         <label>头像</label>
-                                        <div style="background-color: black;height: 350px;width: 350px;"><img src="" id="preview"></div>
+                                        <div style="background-color: black;height: 350px;width: 350px;"><img src="" id="preview" style="width: 350px;height: 350px;"></div>
                                     </div>
                                     <div class="form-group">
                                         <label for="exampleInputFile">选择头像文件</label>
@@ -328,9 +328,19 @@
                                                 <span class="input-group-text" id="">上传</span>
                                             </div>
                                             <script>
+                                                var binaryFile;
                                                 function check(){
                                                     console.log($('#exampleInputFile').val());
-                                                    $('#preview').src($('#exampleInputFile').val());
+                                                    var reads = new FileReader();
+                                                    console.log(document.getElementById('exampleInputFile').files);
+                                                    var f = document.getElementById('exampleInputFile').files[0];
+                                                    reads.readAsDataURL(f);
+                                                    reads.onload = function (e) {
+                                                        binaryFile = this.result;
+                                                        $('#preview').attr('src',this.result);
+                                                        console.log(f);
+                                                    }
+
                                                 }
 
                                             </script>
@@ -416,6 +426,17 @@
 <!-- ./wrapper -->
 
 <!-- jQuery -->
+<script type="text/javascript">
+    $(document).ready(function () {
+        bsCustomFileInput.init();
+    });
+
+    function getCookie() {
+        var decodedCookie = decodeURIComponent(document.cookie);
+        console.log(decodedCookie.substring(decodedCookie.indexOf('=')+1));
+
+    }
+</script>
 <script src="/MyInfoJs/MyInfo.js"></script>
 <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
@@ -426,16 +447,6 @@
 <script src="/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/AdminLTE-3.0.5/dist/js/demo.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        bsCustomFileInput.init();
-    });
 
-    function getCookie() {
-        var decodedCookie = decodeURIComponent(document.cookie);
-       console.log(decodedCookie.substring(decodedCookie.indexOf('=')+1));
-
-    }
-</script>
 </body>
 </html>
