--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -19,26 +19,27 @@
     <script th:src="@{/js/sockjs.min.js}"></script>
     <script th:src="@{/js/stomp.js}"></script>
     <script th:src="@{/js/jquery-3.1.1.js}"></script>
+    <script src="/js/globe.js"></script>
     <!-- jQuery -->
-    <script src="../../static/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"
+    <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"
             th:src="@{/AdminLTE-3.0.5/plugins/jquery/jquery.min.js}"></script>
     <!-- Bootstrap 4 -->
-    <script src="../../static/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"
+    <script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"
             th:src="@{/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js}" ></script>
     <!-- bs-custom-file-input -->
-    <script src="../../static/AdminLTE-3.0.5/plugins/bs-custom-file-input/bs-custom-file-input.min.js"
+    <script src="/AdminLTE-3.0.5/plugins/bs-custom-file-input/bs-custom-file-input.min.js"
             th:src="@{/AdminLTE-3.0.5/plugins/bs-custom-file-input/bs-custom-file-input.min.js}"></script>
     <!-- SweetAlert2 -->
-    <script src="../../static/AdminLTE-3.0.5/plugins/sweetalert2/sweetalert2.min.js"
+    <script src="/AdminLTE-3.0.5/plugins/sweetalert2/sweetalert2.min.js"
             th:src="@{/AdminLTE-3.0.5/plugins/sweetalert2/sweetalert2.min.js}"></script>
     <!-- Toastr -->
-    <script src="../../static/AdminLTE-3.0.5/plugins/toastr/toastr.min.js"
+    <script src="/AdminLTE-3.0.5/plugins/toastr/toastr.min.js"
             th:src="@{/AdminLTE-3.0.5/plugins/toastr/toastr.min.js}"></script>
     <!-- AdminLTE App -->
-    <script src="../../static/AdminLTE-3.0.5/dist/js/adminlte.min.js"
+    <script src="/AdminLTE-3.0.5/dist/js/adminlte.min.js"
             th:src="@{/AdminLTE-3.0.5/dist/js/adminlte.min.js}"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="../../static/AdminLTE-3.0.5/dist/js/demo.js"
+    <script src="/AdminLTE-3.0.5/dist/js/demo.js"
             th:src="@{/AdminLTE-3.0.5/dist/js/demo.js}"></script>
 </head>
 <body class="hold-transition sidebar-mini-md" onload="connect()">
