--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -647,7 +647,7 @@
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form class="form-horizontal" th:action="@{../login}" method="post">
+              <form class="form-horizontal" th:action="@{../login}">
                 <div class="card-body">
                   <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
@@ -659,7 +659,6 @@
                     <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
                     <div class="col-sm-10">
                       <input type="password" name="userPassword" class="form-control" id="inputPassword3" placeholder="Password">
-                      <input id="userAdminForUser" type="hidden" th:value="${userAdminForUser}">
                     </div>
                   </div>
                   <div class="form-group row">
@@ -673,7 +672,7 @@
                 </div>
                 <!-- /.card-body -->
                 <div class="card-footer">
-
+                  <input type="hidden" id="userAdminForUser" th:value="${userAdminForUser}" oninput="getEmail()">
                     <button type="submit" class="btn btn-info" onclick="setCookie()">Sign in</button>
                     <button type="submit" class="btn btn-default float-right">Cancel</button>
                     <div class="row">
@@ -747,19 +746,17 @@ function showResponse(message) {
   })
 }
 
-// function setCookie() {
-//   var d=$("#userAdminForUser").getAttributeNames();
-//   // document.cookie="userAdminForUser="+d;
-//   $(document).Toasts('create', {
-//     class: 'bg-info',
-//     title: 'Toast Title',
-//     subtitle: 'Subtitle',
-//     body:d
-//   })
 
-
+var email
+function setCookie() {
+  var d=$("#userAdminForUser").getAttribute();
+  document.cookie="userAdmin="+d;
 }
 
+function getEmail() {
+    email = $("#userAdminForUser").val();
+    console.log(email);
+}
 
 </script>
 </body>
