前端与数据库更新

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,12 +38,12 @@
 <body>
 
 <!-- Page Wrapper -->
-<div id="wrap" class="layout-1"> 
+<div id="wrap" class="layout-3">
   
   <!-- Top bar -->
   
   <!-- Header -->
-  <header class="header-style-3">
+  <header class="header header-style-3">
     <!-- Nav -->
     <nav class="navbar ownmenu">
       <div class="container"> 
