--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -161,8 +161,9 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-          <i class="fas fa-th-large"></i>
+        <a href="/cart" class="nav-link">
+          <i class="fas fa-shopping-cart "></i>
+          <span class="badge badge-warning navbar-badge">1</span>
         </a>
       </li>
     </ul>
