--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2916,7 +2916,8 @@ header .navbar {
 	border: none;
 	margin: 0px;
 	position: static;
-	padding: 0px;
+	padding-left: 10%;
+	padding-right: 10%;
 	border-radius: 0px;
 	text-align: center;
 	width: 100%;
@@ -2935,6 +2936,7 @@ header .logo {
 	-ms-transition: 0.2s ease-in-out;
 	-o-transition: 0.2s ease-in-out;
 	transition: 0.2s ease-in-out;
+	margin-left: 20px;
 }
 header .logo img {
 	position: relative;
@@ -3267,9 +3269,9 @@ header .search-cate {
 	min-width: 600px;
 	display: inline-block;
 	height: 50px;
-	margin-left: 300px;
+	margin-left: 350px;
 	position: relative;
-	border: 1px solid #dddddd;
+	border: 2px solid #000000;
 	border-radius: 50px;
 	padding-left: 20px;
 	background: #fff;
@@ -3300,7 +3302,7 @@ header .search-cate .bootstrap-select.btn-group .dropdown-menu ul {
 }
 header .search-cate input {
 	border: none;
-	height: 48px;
+	height: 20px;
 	padding: 0 20px;
 	width: 60%;
 	border-radius: 10px;
