--- a/src/main/resources/templates/ListProducts.html
+++ b/src/main/resources/templates/ListProducts.html
@@ -161,7 +161,7 @@
             <li><a href="index.html">Home </a></li>
 			<li><a href="About.html"> About </a></li>
 			<li><a href="ListProducts.html"> List Products </a></li>
-            <li><a href="Product-Details.html"> Product Details </a></li>
+            <li><a href="goods/product_details.html"> Product Details </a></li>
             <li><a href="contact.html"> Contact </a></li>
           </ul>
         </div>
